hphp/hack/test/sound_dynamic/typing/upcast.bad.php.exp
File "upcast.bad.php", line 5, characters 3-19:
Typing error (Typing[4110])
  File "upcast.bad.php", line 5, characters 13-19:
  Expected `dynamic`
  File "upcast.bad.php", line 4, characters 12-16:
  But got `mixed`
File "upcast.bad.php", line 9, characters 3-27:
Typing error (Typing[4110])
  File "upcast.bad.php", line 8, characters 19-21:
  Expected `int`
  File "upcast.bad.php", line 9, characters 20-26:
  But got `dynamic`
  File "upcast.bad.php", line 9, characters 20-26:
  This type argument to `Vector` must match exactly (it is invariant)
File "upcast.bad.php", line 10, characters 3-19:
Typing error (Typing[4110])
  File "upcast.bad.php", line 10, characters 13-19:
  Expected `dynamic`
  File "upcast.bad.php", line 8, characters 12-22:
  Type `Vector<int>` is not a subtype of `dynamic` under dynamic-aware subtyping
